# scarabot

./: README.md
scarabot_control/: CMakeLists.txt  package.xml
scarabot_control/config/: scarabot_control.yaml
scarabot_control/launch/: scarabot_control.launch
scarabot_description/: CMakeLists.txt  package.xml
scarabot_description/launch/: scarabot.rviz  scarabot_rviz.launch
scarabot_description/urdf/: scarabot.urdf
scarabot_gazebo/: CMakeLists.txt  package.xml
scarabot_gazebo/launch/: scarabot_world.launch
scarabot_gazebo/worlds/: scarabot.world
